2007-05-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Round of updating to synch up with the Tcl
	* win/rules.vc:    core version of this build system.
	* win/nmakehlp.c:
	* win/sample.rc:   Added sample resource file.

2007-02-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in, configure.in (CLEANFILES): correct cleanup handling
	of pkgIndex.tcl and clarify when it should be in CLEANFILES,
	CONFIG_CLEAN_FILES and/or BINARIES. [Bug 1655088]
	* configure: Updated with TEA 3.6 changes

2006-11-26  Daniel Steffen  <das@users.sourceforge.net>

	* Makefile.in: add datarootdir for autoconf-2.60.

	* configure: autoconf-2.59 for TEA updates.

2006-09-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/nmakehlp.c:  Updated for building extensions with msvc8,
	* win/makefile.vc: support for varying compiler options for
	* win/rules.vc:    msvc6,7,8.

2006-01-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure.in, configure: update to TEA 3.5

2006-01-10  Daniel Steffen  <das@users.sourceforge.net>

	* generic/sample.c:
	* generic/tclsample.c: fix gcc4 warnings.

	* configure: autoconf-2.59 for TEA updates.

2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* configure: autoconf-2.59 for TEA updates.

2005-11-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: update to TEA 3.4 (darwin-64, Win-64
	build improvements). [Bug 1369597]

	* pkgIndex.tcl.in: specify $PACKAGE_NAME to load

2005-11-27  Daniel Steffen  <das@users.sourceforge.net>

	* configure: autoconf-2.59 for TEA updates.

2005-09-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: using TEA 3.3 that has threads enabled
	by default.

	* Makefile.in: remove unnecessary private dir info

2005-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Remove SYSTEM_TCLSH and revert
	back to just using TCLSH_PROG and WISH_PROG.
	Remove use of SYSTEM_TCLSH at build time since
	this is no longer supported.
	* configure: Regen.